<resources>
    <string name="app_name">FitnessAPP</string>
    <string name="tvUsername">Username</string>
    <string name="tvPassword">Password</string>
    <string name="btnLogin">Log in</string>
    <string name="btnToForgotPage">forgot account?</string>
    <string name="btnSignUp">Sign up!</string>
    <string name="tvFullname">Full name</string>
    <string name="tvEmail">E-Mail</string>
    <string name="tvConfirmPassword">Confirm Password</string>
    <string name="btnCreateAcc">Create Account</string>
    <string name="btnSend">Send</string>
    <string name="tvInputEmail">Please input your email/username.</string>
    <string name="tvPromtMsg"> </string>
</resources>